# SkinnyV

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  viz.html
.github/workflows/: build.yml
public/: viz.html
src/: control.js  main.js  style.css  visualizer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs
