[package]
name = "skinnyv"
version = "0.1.0"
description = "Lean system audio visualizer with multi-monitor support"
authors = ["Claire Millarker"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "skinnyv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
rustfft = "6.2"
realfft = "3.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
