[package]
name = "skinnyv"
version = "1.1.0"
description = "Lean system audio visualizer with multi-monitor support"
authors = ["Claire Millarker"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "skinnyv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6.2"
realfft = "3.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Windows captures system audio via WASAPI loopback (input stream on an output device).
[target.'cfg(windows)'.dependencies]
cpal = "0.15"

# Linux/other capture from a PulseAudio/PipeWire monitor source.
[target.'cfg(not(windows))'.dependencies]
libpulse-binding = "2"
libpulse-simple-binding = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
